--- a/Triangles/Triangles.csproj
+++ b/Triangles/Triangles.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triangle.cs" />
     <Compile Include="SortTrianglesDescendingHelper.cs" />
+    <Compile Include="TriangleArgsValidator.cs" />
     <Compile Include="TriangleValidator.cs" />
   </ItemGroup>
   <ItemGroup>
