--- a/Envelopes/Envelopes.csproj
+++ b/Envelopes/Envelopes.csproj
@@ -69,10 +69,10 @@
     <Compile Include="Application.cs" />
     <Compile Include="CompareResult.cs" />
     <Compile Include="Envelope.cs" />
-    <Compile Include="IEnvelopeValidator.cs" />
+    <Compile Include="IEnvelopeArgsValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EnvelopeValidator.cs" />
+    <Compile Include="EnvelopeArgsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
