--- a/Fibonacci/Fibonacci.csproj
+++ b/Fibonacci/Fibonacci.csproj
@@ -46,10 +46,10 @@
     <Compile Include="Application.cs" />
     <Compile Include="FibonacciEnumerator.cs" />
     <Compile Include="FibonacciSequence.cs" />
-    <Compile Include="ISequenceValidator.cs" />
+    <Compile Include="ISequenceArgsValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SequenceValidator.cs" />
+    <Compile Include="SequenceArgsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
