--- a/NumericalSequence/NumericalSequence.csproj
+++ b/NumericalSequence/NumericalSequence.csproj
@@ -44,12 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
-    <Compile Include="ISequenceValidator.cs" />
+    <Compile Include="ISequenceArgsValidator.cs" />
     <Compile Include="NumericalSequence.cs" />
     <Compile Include="NumericalSequenceEnumerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SequenceValidator.cs" />
+    <Compile Include="SequenceArgsValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
