--- a/Triangles/Triangles.csproj
+++ b/Triangles/Triangles.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
-    <Compile Include="ITriangleValidator.cs" />
+    <Compile Include="ITriangleArgsValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Triangle.cs" />
