--- a/TriangleSort.Tests/TriangleSort.Tests.csproj
+++ b/TriangleSort.Tests/TriangleSort.Tests.csproj
@@ -57,7 +57,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TriangleArgsValidatorTests.cs" />
+    <Compile Include="SortTrianglesDescendingHelperTests.cs" />
+    <Compile Include="TriangleValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +67,16 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Triangles\TriangleSort.csproj">
+      <Project>{c18760ce-56ef-4fd5-a51f-83e091051933}</Project>
+      <Name>TriangleSort</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Validation\Validation.csproj">
+      <Project>{EB67766B-4732-4C7F-8A36-2F215C7AAFCA}</Project>
+      <Name>Validation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
