--- a/Triangles/TriangleSort.csproj
+++ b/Triangles/TriangleSort.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C18760CE-56EF-4FD5-A51F-83E091051933}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Triangles</RootNamespace>
-    <AssemblyName>Triangles</AssemblyName>
+    <RootNamespace>TriangleSort</RootNamespace>
+    <AssemblyName>TriangleSort</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
