--- a/NumericalSequence.Tests/NumericalSequence.Tests.csproj
+++ b/NumericalSequence.Tests/NumericalSequence.Tests.csproj
@@ -6,11 +6,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DC39DFBD-D39B-4111-991A-E7264172A19C}</ProjectGuid>
+    <ProjectGuid>{7C2D3E12-0097-47D1-B321-53B355631D2C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TriangleSort.Tests</RootNamespace>
-    <AssemblyName>TriangleSort.Tests</AssemblyName>
+    <RootNamespace>NumericalSequence.Tests</RootNamespace>
+    <AssemblyName>NumericalSequence.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -57,10 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SortTrianglesDescendingHelperTests.cs" />
+    <Compile Include="NumericalSequenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TriangleArgsValidatorTests.cs" />
-    <Compile Include="TriangleValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -69,13 +67,9 @@
     <Analyzer Include="..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Triangles\TriangleSort.csproj">
-      <Project>{c18760ce-56ef-4fd5-a51f-83e091051933}</Project>
-      <Name>TriangleSort</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Validation\Validation.csproj">
-      <Project>{EB67766B-4732-4C7F-8A36-2F215C7AAFCA}</Project>
-      <Name>Validation</Name>
+    <ProjectReference Include="..\NumericalSequence\NumericalSequence.csproj">
+      <Project>{be5dc8fa-514f-4425-8c19-068f0a0d0c6e}</Project>
+      <Name>NumericalSequence</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
