--- a/NumericalSequence.Tests/NumericalSequence.Tests.csproj
+++ b/NumericalSequence.Tests/NumericalSequence.Tests.csproj
@@ -57,8 +57,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NumericalSequenceEnumeratorTests.cs" />
     <Compile Include="NumericalSequenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequenceArgsValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -70,6 +72,10 @@
     <ProjectReference Include="..\NumericalSequence\NumericalSequence.csproj">
       <Project>{be5dc8fa-514f-4425-8c19-068f0a0d0c6e}</Project>
       <Name>NumericalSequence</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Validation\Validation.csproj">
+      <Project>{eb67766b-4732-4c7f-8a36-2f215c7aafca}</Project>
+      <Name>Validation</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
