--- a/NumericalSequence/NLog.config
+++ b/NumericalSequence/NLog.config
@@ -24,7 +24,7 @@
     -->
 
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
+            layout="${longdate} | ${uppercase:${level}} | ${message}" />
 
   </targets>
 
