--- a/NumericalSequence/NumericalSequence.csproj
+++ b/NumericalSequence/NumericalSequence.csproj
@@ -65,6 +65,7 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="ClassDiagram.cd" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
