--- a/NumericalSequence/NumericalSequence.csproj
+++ b/NumericalSequence/NumericalSequence.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Constants\NumericConstants.cs" />
     <Compile Include="Validator\ISequenceArgsValidator.cs" />
     <Compile Include="Logic\NumericalSequence.cs" />
     <Compile Include="Logic\NumericalSequenceEnumerator.cs" />
