--- a/Triangles/TriangleSort.csproj
+++ b/Triangles/TriangleSort.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Constants\NumericConstants.cs" />
     <Compile Include="Constants\StringConstants.cs" />
     <Compile Include="Validator\ITriangleArgsValidator.cs" />
     <Compile Include="Program.cs" />
